--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
 
   <body>
     <img src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
-    <h2>DevOps is a methodology meant to improve work throughout the software development lifecycle.</h2>
+    <h2>DevOps is cool.</h2>
     <p th:text="${message}">Exception message</p>
   </body>
 
